<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e7f4ff"
    android:orientation="vertical"
    tools:context="framgia.vn.cfn.LoginActivity">

    <framgia.vn.cfn.ToolbarCustom
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMain"/>

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/about_login"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="30dp"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="7">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_account"/>

            <EditText
                android:id="@+id/edit_username"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:hint="@string/username"
                android:inputType="textEmailAddress"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="7">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_account"/>

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="7">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="#ed7d31"
                    android:text="@string/title_login"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"/>

                <Button
                    android:id="@+id/button_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="#ed7d31"
                    android:text="@string/title_btn_facebook"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/text_fg_pass"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autoLink="web"
            android:gravity="center"
            android:linksClickable="true"
            android:text="@string/forget_password"
            android:textColor="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/register_member"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#ed7d31"
        android:text="@string/title_btn_register"
        android:textAllCaps="false"
        android:textColor="@android:color/white"/>

</LinearLayout>
